# weather-symphony

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  setup.cfg
components/: SceneParser.py
components/sections/: Strings.py  __init__.py
data_loaders/: DataLoader.py  __init__.py
demo/: index.html  main.py  open_weather_api.py
experiments/: live_midi.py
music/: Track.py
weather_data/: berlin_2021_07_06.json  berlin_2021_07_06_edited.json  erftstadt_2021_07_15_flooding.json  neuenhagen_2021_07_12.json  test.json  test.yaml
weather_symphony/: __main__.py  main.py
weather_symphony/components/: HarmonyGenerator.py  SceneParser.py  __init__.py  harmony_generator.py  scene_parser.py
weather_symphony/components/sections/: Brass.py  Section.py  Strings.py  __init__.py  flute_melody.py  glockenspiel_melody.py  harmony_section.py  melody_section.py  percussion.py  section.py  strings.py  trumpets.py  tuba.py  upperstrings.py  violin_melody.py  xylophone_melody.py
weather_symphony/data_loaders/: DataLoader.py  __init__.py  api_file_loader.py  dummy_loader.py
weather_symphony/experiments/: live_midi.py
weather_symphony/music/: Chords.py  Key.py  Meter.py  Track.py  __init__.py  chords.py  key.py  util.py
